--- a/DistilledTV/Podfile
+++ b/DistilledTV/Podfile
@@ -5,7 +5,7 @@ target 'DistilledTV' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for meteorz
+  # Pods for DistilledTV
   pod 'TinyConstraints'
   pod 'Reveal-SDK', :configurations => ['Debug']
   
